--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -174,6 +174,7 @@
     .info-tel span:nth-child(1),
     .social-media a span {
         font-size: 1rem;
+        min-width: fit-content;
     }
 
     .info-tel span:nth-child(2) {
