change json and html number on footer
i've change the json doc because the index of vasos inside microverdes doesn't work for my code. so i added to plantas em vaso, because it is all the same.

i also change, on plantasEmVaso. js the select element to from gr to un

--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -13,24 +13,26 @@
     display: grid;
     gap: 1vw;
     grid-template-columns: repeat(2, 1fr);
+    min-width: 100vw;
     max-width: 100vw;
-    margin: 7rem auto;
+    padding: 10vh;
     justify-content: center;
+    align-items: center;
 }
 
 .boxItem {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0.5rem;
-    justify-content: center;
-    max-height: min-content;
-    margin: 0 0.1rem;
+    justify-content: space-around;
+    min-height: 40vh;
+    /* max-height: fit-content; */
     gap: 0.5rem;
     align-items: center;
     font-size: 1rem;
     font-weight: 700;
     border: solid var(--green-one) 2px;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
 }
 
 .boxItem h3 {
@@ -42,35 +44,40 @@
     grid-column: span 2;
     padding: 0.4rem;
     border-radius: 0.5rem;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    font-weight: bold;
     letter-spacing: 0.1rem;
     min-height: 2.6rem;
+    min-width: 0%;
+    max-width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .boxItem img {
     grid-column: span 2;
     object-fit: contain;
-    max-width: 90%;
-    margin: auto;
-    border-radius: 1rem;
+    max-width: 80%;
+    margin: 0 auto;
+    border-radius: 0.5rem;
     /* opacity: 0.6; */
-    transition: 1s;
-    box-shadow: 0 0.3rem 0.7rem 0;
+    /* transition: 1s; */
+    /* box-shadow: 0 0.3rem 0.7rem 0; */
 }
 
 .boxItem select {
-    max-width: 100%;
+    max-width: 75%;
     border-radius: 0.5rem;
-    font-size: 1rem;
-    padding: 0.3rem;
+    font-size: 0.7rem;
+    padding: 0.2rem;
+    font-weight: bold;
 }
 
 .boxItem select option {
-    color: var(--green);
-    background-color: var(--white);
+    color: var(--white);
+    background-color: var(--black);
     max-width: 50%;
     font-weight: 600;
 }
@@ -80,13 +87,50 @@
     background-color: var(--white);
 }
 
+
 .boxItem button {
     background-color: var(--black);
-    border-radius: 1rem;
-    padding: 0.5rem;
+    border: solid var(--black) 2px;
+    border-radius: 0.3rem;
+    padding: 0.3rem;
     color: var(--white);
-    font-weight: 700;
     letter-spacing: 0.1rem;
     outline: none;
-    border: none;
+    max-width: 100%;
+}
+
+
+@media screen and (min-width: 700px) {
+
+.ervas,
+.saladas,
+.verduras,
+.raizes,
+.microverdes,
+.floresComestiveis,
+.leguminosas,
+.horticulas,
+.ovos,
+.sabaoNatural,
+.plantasEmVaso {
+    grid-template-columns: repeat(4, 1fr);
+    margin: 15vh auto;
+}
+
+.boxItem img {
+    max-height: 30vh;
+    /* max-width: 65%; */
+}
+
+.boxItem h3 {
+    font-size: 0.7rem;
+    font-weight: bold;
+}
+
+.boxItem button:hover {
+    color: var(--orange);
+    cursor: pointer;
+    border: solid 2px var(--orange);
+}
+
 }
