--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -13,9 +13,8 @@
     display: grid;
     gap: 1vw;
     grid-template-columns: repeat(2, 1fr);
-    min-width: 100vw;
     max-width: 100vw;
-    padding: 10vh;
+    padding: 10vh 2vw;
     justify-content: center;
     align-items: center;
 }
@@ -25,7 +24,7 @@
     grid-template-columns: repeat(2, 1fr);
     padding: 0.5rem;
     justify-content: space-around;
-    min-height: 40vh;
+    min-height: 30vh;
     /* max-height: fit-content; */
     gap: 0.5rem;
     align-items: center;
@@ -79,6 +78,7 @@
     color: var(--white);
     background-color: var(--black);
     max-width: 50%;
+    margin: 0 auto;
     font-weight: 600;
 }
 
