--- a/stylesheet/produtos.css
+++ b/stylesheet/produtos.css
@@ -2,9 +2,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    justify-content: center;
-    gap: 1vw;
-    margin: 5vh auto 10vh auto;
+    justify-content: space-around;
+    margin: 5vh 2vw 10vh 2vw;
 }
 
 .all-products .title-div {
@@ -22,8 +21,8 @@
 
 .all-products img {
     object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 35vw;
+    /* max-height: 50%; */
     border-radius: 1rem;
     transition: 1s;
 }
@@ -34,9 +33,11 @@
 }
 
 .all-products a p {
+    max-width: 35vw;
     border-radius: 1rem 0 1rem 0;
-    background-color: var(--green);
-    border: none;
+    color: var(--green);
+    background-color: var(--white); 
+    border: solid 2px var(--green);
     outline: none;
     padding: 0.2rem;
     margin: auto;
@@ -90,7 +91,7 @@
         color: var(--orange);
     }
 
-    .all-products
+  
 
 
 }
