--- a/stylesheet/testemunhos.css
+++ b/stylesheet/testemunhos.css
@@ -1,15 +1,27 @@
 .testimonials {
     display: grid;
     gap: 3vh;
-    margin: 20vh auto;
+    margin: 10vh auto;
+}
+
+.testimonials .client-name {
+    color: var(--yellow);
+    letter-spacing: 0.1rem;
+}
+
+.testimonials .client-testimonial .date-and-job {
+    color: var(--green-one);
 }
 
 .testimonials > div:nth-child(odd) {
     text-align: left;
+    background-color: var(--green);
+    color: var(--white);
 }
 
 .testimonials > div:nth-child(even) {
     text-align: right;
+    color: var(--green);
 }
 
 .testimonials > div:nth-child(odd), 
@@ -20,7 +32,6 @@
     gap: 0.5rem;
     margin: 0 3vw;
     border-radius: 1rem 0 1rem 0;
-
 }
 
 .testimonials .date-and-job {
@@ -29,6 +40,7 @@
     flex-direction: row-reverse;
     min-width: 100%;
     text-transform: uppercase;
+    margin-top: 1vh;
 }
 
 
