--- a/stylesheet/testemunhos.css
+++ b/stylesheet/testemunhos.css
@@ -44,6 +44,27 @@
 }
 
 
+.section-title {
+    font-size: 1.5rem;
+    font-weight: 800;
+    text-align: left;
+    color: var(--green);
+    margin: 0 0 0 1rem;
+}
+
+@media screen and (min-width: 700px) {
+    .testimonials {
+        grid-template-columns: repeat(4, 1fr); 
+        gap: 0;
+        justify-content: center;
+        margin: 20vh 3vw;
+    }
+
+    .testimonials > div:nth-child(even) {
+        text-align: left;
+    }
+
+}
 
 
 
