Icon title added and test form

--- a/stylesheet/thankYou.css
+++ b/stylesheet/thankYou.css
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.thankYou .message {
+.thankYouMessage {
     color: var(--black);
     font-size: 0.7rem;
     margin: 0 15vw;
