--- a/stylesheet/bottomMenu.css
+++ b/stylesheet/bottomMenu.css
@@ -8,14 +8,14 @@
     justify-content: space-around;
     align-items: center;
     padding: 0.5rem 0;
-    background-color: var(--green);
+    background-color: var(--white);
     min-width: 100vw;
     max-width: 100vw;
     max-height: 6vh;
 }
 
 .bottom-menu div i {
-    color: var(--white);
+    color: var(--green);
 }
 
 @media screen and (min-width: 700px) {
