--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -3,11 +3,10 @@
 /* Cabaz Um */
 
 .cabaz-um, .cabaz-dois, .cabaz-tres {
-    margin: 5rem auto 0 auto;
+    margin: 7dvh 2vw;
     display: grid;
-    justify-content: center;
     /* border: solid red 1px; */
-    max-width: 100vw;
+    max-width: 100%;
 }
 
 .cabaz-name-title {
@@ -24,11 +23,12 @@
 
 .cabaz-content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: center;
     gap: 5vw;
-    padding: 0.5rem;
+    padding: 10vw;
     border: solid var(--green-one) 0.2rem;
     margin: 0 5vw;
     border-radius: 5%;
@@ -48,9 +48,9 @@
     outline: none;
     font-weight: 700;
     padding: 0.4rem;
-    grid-column-start: 2;
+    /* grid-column-start: 2; */
     margin: 0 auto;
-    grid-column: span 2;
+    /* grid-column: span 2; */
     cursor: pointer;
 }
 
@@ -62,23 +62,32 @@
 .cabaz-content img, .sugestionsContent div a img {
     max-width: 40vw;
     object-fit: cover;
+    /* border: solid red 2px; */
 }
 
-.sugestions {
-    margin: 5rem auto;
-    max-width: 100vw;
-    display: grid;
-    gap: 5vh;
-    padding-left: 2vw;
-    /* overflow: scroll;  */
+.sugestionsTitle {
+    margin: 5vh 0 0 0;
+    text-align: left;
+    font-weight: bold;
+    text-decoration: underline;
+    color: var(--black);
+    background-color: var(--orange);
+    max-width: fit-content;
+    padding: 1rem;
+    border-radius: 1rem 0;
 }
 
 .sugestionsContent {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    overflow-x: scroll;
-    gap: 10vw;
+    /* grid-template-columns: repeat(3, 1fr); */
+    /* overflow-x: scroll; */
+    gap: 5vw;
     padding: 2vw;
+    margin: 5vh auto;
+}
+
+.sugestionsContent .sugestionsTitle {
+    float: left;
 }
 
 .sugestionsContent::-webkit-scrollbar,
@@ -105,6 +114,8 @@
 
 .sugestion a span {
     text-align: center;
+    color: var(--orange);
+    font-size: 1.5rem;
 }
 /*
 .sugestion:hover {
@@ -121,14 +132,14 @@
 .cabaz-menu {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    gap: 3vw;
     margin: 3vh 1.5rem;
 }
 
-.cabaz-1, .cabaz-2, .cabaz-3, .cabaz-4 {
+/* .cabaz-1, .cabaz-2, .cabaz-3, .cabaz-4 {
     position: relative;
-    /* border: solid blue 4px; */
-}
+     border: solid blue 4px; 
+
 
 .cabazOne, .cabazTwo, .cabazThree, .cabazFour {
     position: absolute;
@@ -136,28 +147,33 @@
     bottom: 25%;
     left: 10%;
     right: 10%;
-    /* border: solid green 4px; */
-}
+    /* border: solid green 4px; 
+} */
 
 .cabazContent {
     font-size: 1rem;
-    /* border: solid red 2px; */
+    border: solid var(--orange) 2px;
+    border-radius: 1rem 0;
+    background-color: var(--green-one);
     /* min-height: 3rem; */
     color: var(--black);
     display: grid;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    min-height: 20vh;
     min-width: 100%;
-    gap: 0.5rem;
+    gap: 3vh;
+    padding: 10%;
 }
 
 .cabazContent h4 {
     font-weight: bold;
-    background-color: var(--black);
-    color: var(--white);
+    background-color: var(--green-one);
+    color: var(--black);
     padding: 0.3rem;
-    border-radius: 0.5rem;
+    /* border-radius: 0.5rem; */
+    min-width: max-content;
+    text-transform: uppercase;
 }
 
 .cabazContent span {
@@ -178,17 +194,22 @@
     /* box-shadow: 0 0.3rem 0.7rem 0; */
 }
 
+.cabaz-menu .photo-div-cabaz a {
+    text-decoration: none;
+}
+
 /* .photo-div-cabaz img:hover {
     transform: scale(1.1);
 } */
 
 .title-div {
     font-weight: bold;
-    margin: 5vh 0;
+    margin: 5vh 0 0 0;
     max-width: 100%;
     padding: 3vh;
+    color: var(--orange);
     /* border-radius: 0 35rem 0 35rem; */
-    background-color: var(--yellow);
+    /* background-color: var(--yellow); */
     text-align: center;
 }
 
@@ -273,19 +294,17 @@
 
     .title-div {
         font-weight: bold;
-        margin: 5vh 0;
-        max-width: 100vw;
-        padding: 3vh;
-        /* border-radius: 0 35rem 0 35rem; */
-        background-color: var(--green-one);
-        color: var(--white);
+        margin: 5vh auto;
+        max-width: 70%;
+        background-color: var(--white);
+        color: var(--green-one);
         text-align: center;
     }
 
     .hortaDaRia {
         font-size: 2rem;
-        color: var(--white);
-        background-color: var(--green-one);
+        color: var(--green-one);
+        background-color: var(--white);
         font-weight: bold;
         border-radius: 0;
     }
@@ -299,7 +318,7 @@
         grid-template-columns: repeat(4, 1fr);
         justify-content: center;
         gap: 5vw;
-        margin: 10vh auto;
+        margin: 2vh auto;
     }
 
     .cabaz-1 a, .cabaz-2 a, .cabaz-3 a, .cabaz-4 a {
