--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -11,26 +11,28 @@
 .sabaoNatural,
 .plantasEmVaso {
     display: grid;
-    gap: 1vw;
+    gap: 2vw;
     grid-template-columns: repeat(2, 1fr);
     max-width: 100vw;
     padding: 10vh 2vw;
     justify-content: center;
-    align-items: center;
+    /* border: solid red 1px; */
+    background-color: var(--green);
 }
 
 .boxItem {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0.5rem;
-    justify-content: space-around;
-    min-height: 30vh;
-    /* max-height: fit-content; */
-    gap: 0.5rem;
     align-items: center;
+    justify-content: center;
+    /* max-height: 30vh; */
+    max-height: max-content;
+    gap: 0.5rem;
     font-size: 1rem;
     font-weight: 700;
     border: solid var(--green-one) 2px;
+    background-color: var(--white);
     border-radius: 0.5rem;
 }
 
@@ -47,7 +49,7 @@
     font-weight: bold;
     letter-spacing: 0.1rem;
     min-height: 2.6rem;
-    min-width: 0%;
+    /* min-width: 0%; */
     max-width: 90%;
     display: flex;
     justify-content: center;
@@ -58,7 +60,8 @@
 .boxItem img {
     grid-column: span 2;
     object-fit: contain;
-    max-width: 80%;
+    max-width: 100%;
+    /* max-height: 50%; */
     margin: 0 auto;
     border-radius: 0.5rem;
     /* opacity: 0.6; */
