--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -25,7 +25,7 @@
     grid-template-columns: repeat(2, 1fr);
     padding: 0.5rem;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     /* max-height: 30vh; */
     max-height: max-content;
     gap: 0.5rem;
