--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -1,74 +1,81 @@
+.shopping-cart img {
+    max-width: 15dvh;
+    object-fit: cover;
+    border-radius: 1rem 0;
+}
+
 .shopping-cart {
+    margin: 12vh 0;
+    /* border: green solid 1px; */
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    max-width: 90vw;
-    gap: 0.5rem;
-    padding: 1rem;
-    margin: 5rem auto;
-}
-
-.cart-item {
-    border: solid var(--green-one) 2px;
-    padding: 0.5rem;
-    display: grid;
-    gap: 0.5rem;
-    justify-content: center;
-    border-radius: 1rem;
-}
-
-.cart-item h3, .priceToPay {
-    margin: 0 auto;
-    /* text-align: center; */
-}
-
-.cart-item img {
-    margin: 0 auto;
-    max-width: 30vw;
-}
-
-.lessOrMore {
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-    padding: 0.2rem;
+    gap: 1rem;
     align-items: center;
 }
 
-.lessOrMore input {
-    max-width: 20%;
+.box-cart {
+    border-bottom: var(--orange) solid 1px;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    gap: 5dvw;
+    margin: 0 auto;
+    padding-bottom: 1rem;
 }
 
-.oneMoreItemBtn, .lessOneItemBtn {
-    border: 0;
-    outline: 0;
-    padding: 0.4rem;
-    color: var(--orange);
-    background-color: var(--black);
-    border-radius: 20%;
+.box-2 {
+    display: grid;
+    gap: 2dvh
+}
+
+.box-2 h3 {
+    font-weight: 800;
+    font-size: 0.9rem;
+    text-decoration: underline;
+}
+
+.box-2-child input {
+    max-width: 20%;
+    border: none;
+    outline: none;
+    color: var(--black);
+    background-color: var(--green-one);
+    border-radius: 15%;
+    min-height: fit-content;
+    font-size: 0.8rem;
     font-weight: bold;
-    font-size: 1rem;
+    padding-left: 7%;
+}
+
+.box-2 :nth-child(2) {
+    display: flex;
+    justify-content: flex-start;
+    gap: 3dvw
+}
+
+.box-2 :nth-child(3) {
+    display: flex;
+    justify-content: flex-start;
+    gap: 15dvw;
+    align-items: center;
+}
+
+.lessOneItemBtn, .oneMoreItemBtn {
+    border: none;
+    outline: none;
+    color: var(--white);
+    background-color: var(--black);
+    padding: 0.3rem 0.4rem;
+    border-radius: 15%;
+    font-weight: bold;
+    font-size: 0.7rem;
 }
 
 .fa-trash-can {
-    border: 0;
-    outline: 0;
-    padding: 0.4rem;
-    color: var(--red);
-    background-color: var(--yellow);
-    border-radius: 20%;
-    font-weight: bold;
-    font-size: 0.8rem;
-}
-
-.addToCart {
-    border: 0;
-    outline: 0;
-    padding: 0.6rem;
-    color: var(--white);
+    border: none;
+    outline: none;
+    color: var(--orange);
     background-color: var(--black);
-    border-radius: 10%;
-    font-weight: bold;
-    font-size: 0.8rem;
-    max-width: fit-content;
-    margin: 0 auto;
+    border-radius: 15%;
+    padding: 0.3rem;
+    font-size: 0.7rem;
 }
