changed initial section of home page structure
i've changed too some colors on all pages

--- a/stylesheet/bottomMenu.css
+++ b/stylesheet/bottomMenu.css
@@ -11,7 +11,7 @@
     background-color: var(--white);
     min-width: 100vw;
     max-width: 100vw;
-    max-height: 6vh;
+    max-height: 6svh;
 }
 
 .bottom-menu div i {
