--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -9,8 +9,10 @@
     --green-one: rgb(175, 200, 173, 1);
     --yellow: rgb(238, 199, 89, 1);
     --orange: rgba(238, 147, 34, 1);
+    --orange-two: rgba(238, 147, 34, 0.3);
     --red: rgba(216, 63, 49, 1);
-    --white: rgb(245, 245, 245);
+    --white: rgb(245, 245, 245, 1);
+    --white-two: rgb(245, 245, 245, 0.6);
     --black: rgba(0,0,0,1);
    
 
@@ -32,10 +34,12 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: var(--white);
+    background-color: var(--white-two);
     min-width: 100%;
     max-width: 100vw;
+    min-height: 10svh;
     max-height: 10svh;
+
     z-index: 99;
     padding: auto;
     display: grid;
@@ -179,6 +183,38 @@ header .menu-list  a:hover {
     padding: 0.3rem;
     border-radius: 50%;
 }
+
+.welcomeSection {
+    max-width: 100dvw;
+    max-height: 100svh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0;
+    margin-top: 10vh;
+}
+
+.welcomeSection div img{
+    object-fit: cover;
+    max-width: 50svw;
+    min-height: 100%;
+    /* border: solid var(--orange) 2px; */
+
+}
+
+.welcomeSection .title-div {
+    display: grid;
+    align-items: center;
+    color: var(--white);
+    min-height: 100%;
+    min-width: 100%;
+    margin: auto;
+    background-color: var(--green);
+    /* border: solid var(--orange) 2px; */
+    border: none;
+    outline: none;
+}
+
+.welcomeSection div .hortaDaRia {color: var(--white);}
 
 @media screen and (min-width: 700px) {
 
