--- a/stylesheet/testemunhos.css
+++ b/stylesheet/testemunhos.css
@@ -48,7 +48,7 @@
     font-size: 1.5rem;
     font-weight: 800;
     text-align: left;
-    color: var(--green);
+    color: var(--orange);
     margin: 0 0 0 1rem;
 }
 
