--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -242,6 +242,7 @@
         /* border: solid red 1px; */
         justify-content: center;
         margin: 2vh auto;
+    
     }
 
     .cabaz-content img {
@@ -305,7 +306,6 @@
         margin: 5vh auto;
         max-width: 70%;
         background-color: var(--white);
-        color: var(--green-one);
         text-align: center;
     }
 
@@ -337,15 +337,15 @@
         min-height: 40vh;
     }
 
+    .cabaz-content:hover {
+
+    }
+
     .cabazContent h4 {
         background-color: transparent;
         color: var(--white);
         border-radius: 0;
-        font-size: 2rem;
-    }
-
-    .cabazContent h4:hover {
-        color: var(--orange);
+        font-size: 1.5rem;
     }
 
     /* .photo-div-cabaz {
