--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -185,12 +185,12 @@ header .menu-list  a:hover {
 }
 
 .welcomeSection {
-    max-width: 100dvw;
+    max-width: 100svw;
     max-height: 100svh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0;
-    margin-top: 10vh;
+    margin-top: 10dvh;
 }
 
 .welcomeSection div img{
@@ -198,7 +198,6 @@ header .menu-list  a:hover {
     max-width: 50svw;
     min-height: 100%;
     /* border: solid var(--orange) 2px; */
-
 }
 
 .welcomeSection .title-div {
@@ -222,14 +221,15 @@ header .menu-list  a:hover {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        min-height: 12svh;
+        /* background-color: var(--white); */
     }
 
     .navbar {
         display: flex;
         gap: 5vw;
-        margin-top: 1vh;
+        align-items: center;
         justify-content: flex-start;
-        padding: 1rem;
     }
     
 
@@ -250,7 +250,7 @@ header .menu-list  a:hover {
     header .menu-list a li {
         list-style: none;
         color: var(--green);
-        background-color: var(--white);
+        background-color: transparent;
         text-align: left;
         padding: 0.3rem;
         font-weight: 900; 
@@ -277,4 +277,75 @@ header .menu-list  a:hover {
     .openMenu::after {
         display: none;
     }
+
+    .welcomeSection {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+        align-items: center;
+        gap: 0;
+        justify-content: center;
+        margin: 0 auto 10vh auto;
+        background-color: var(--green);
+        overflow: hidden;
+    }
+
+    .welcomeSection .title-div {
+        /* border: solid var(--orange) 2px; */
+        min-width: 50dvw;
+    }
+
+    .welcomeSection div img{
+        max-width: 16.6vw;
+        min-height: 100vh;
+        /* border: solid var(--orange) 2px; */
+        transition: all 2000ms ease-in-out;
+    }
+
+    .welcomeSection div img:hover{
+        max-width: 40dvw;
+        z-index: 2;
+        cursor: pointer;
+        /* border: solid var(--orange) 2px; */
+    }
+
+    .welcomeSection div:nth-child(1) {
+        grid-column: 1 / span 1;
+        grid-row: 3 / span 1;
+    }
+
+    .welcomeSection div:nth-child(4) {
+        grid-column: 1 / span 1;
+        grid-row: 4 / span 1;
+    }
+
+    .welcomeSection div:nth-child(5) {
+        grid-column: 1 / span 1;
+        grid-row: 5 / span 1;
+    }
+
+    .welcomeSection div:nth-child(2) {
+        grid-column: 4 / span 1;
+        grid-row: 1 / span 7;
+    }
+    
+    .welcomeSection div:nth-child(3) {
+        grid-column: 5 / span 1;
+        grid-row: 1 / span 7;
+    }
+
+    .welcomeSection div:nth-child(6) {
+        grid-column: 6 / span 1;
+        grid-row: 1 / span 7;
+    }
+    
+    .welcomeSection .title-div {
+        color: var(--white);
+        background-color: var(--green);
+
+    }
+    .welcomeSection div .hortaDaRia {
+        color: var(--white);
+        background-color: transparent;
+    }
+
 }
