--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -120,7 +120,7 @@
 
     .media-and-contacts {
         grid-template-columns: repeat(1, 1fr);
-        margin: 0.5rem;
+        margin: 0.5rem auto 0 auto;
         align-items: center;
         justify-content: center;
     }
@@ -132,28 +132,29 @@
 
 @media screen and (min-width: 700px) {
 
-    /* .media-and-contacts {
-        grid-template-columns: repeat(3, 1fr);
-        padding-bottom: 5vh;
+     .media-and-contacts {
+        grid-template-columns: repeat(4, 1fr);
+       /*padding-bottom: 5vh;
         align-items: center;
         max-width: 100vw;
-        overflow-x: hidden;
+        overflow-x: hidden; */
         margin-bottom: 0; 
+        padding-bottom: 10vh;
+    } 
 
-    } */
-
-    /* .footer-head, .line-break {
+    .footer-head, .line-break {
         grid-column: span 4;
     }
 
     .footer-end {
         grid-column: span 3;
         font-size: 1rem;
-    } */
+    }
 
     .footer-end a {
         padding: 0.2rem;
         max-width: fit-content;
+        font-size: 1rem;
     }
 
     .footer-end a:hover {
@@ -167,6 +168,7 @@
         border: solid var(--white) 2px;
         background-color: transparent;
         font-size: 1.2rem;
+
     }
 
     .media-and-contacts i:hover {
@@ -186,7 +188,7 @@
 }
 
 @media screen and (min-width: 1410px) {
-    
+/*     
     .media-and-contacts {
         grid-template-columns: repeat(4, 1fr);
         padding-bottom: 5vh;
@@ -203,7 +205,7 @@
     .footer-end {
         grid-column: span 3;
         font-size: 1rem;
-    }
+    } */
 
 
 }
