--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -37,7 +37,7 @@ header {
     background-color: var(--white);
     min-width: 100%;
     max-width: 100vw;
-    min-height: 10svh;
+    min-height: 9svh;
     max-height: 10svh;
     z-index: 99;
     padding: auto;
@@ -63,7 +63,7 @@ header {
 .logo-img {
     object-fit: contain;
     border-radius: 50%;
-    max-height: 8svh;
+    max-height: 7svh;
 }
 
 /* =======div with cart and hamburguer menu============= */
@@ -188,14 +188,14 @@ header .menu-list  a:hover {
     min-width: 100svw;
     max-width: 100svw;
     min-height: 100svh;
-    /* max-height: 100dvh; */
+    max-height: 100svh;
     display: grid;
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
     gap: 0;
-    /* margin-top: 10dvh; */
-    /* margin-top: 0; */
+    /* margin-top: 5svh; */
+    margin-top: 0;
     /* border: solid var(--black) 5px; */
 }
 
