--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -104,21 +104,26 @@ header {
 }
 /* =========================================== */
 .menu-list {
-    display: none;
+    /*display: none;
     transition-property: all;
     transition-duration: 500ms;
-    transition-timing-function: linear;
-    /* transform: ; */
+    transition-timing-function: linear;*/
+    position: absolute;
+    top: 9svh;
+    min-width: 100vw;
+    right: -100dvw;
+    transition: 1000ms;
+    background-color: var(--white); 
 }
 
 .show {
-    display: grid;
+    /* display: grid;
     max-width: 100vw;
     background-color: var(--white);
     justify-content: center;
     gap: 0.5rem;
-    padding: 1rem;
-    
+    padding: 1rem; */
+    right: 0;
 }
 
 header .menu-list li {
@@ -130,12 +135,14 @@ header .menu-list li {
     padding: 0.3rem;
     font-weight: 900; 
     cursor: pointer;
-
+    
 }
 
 .menu-list a {
     text-decoration: none;
     color: var(--white);
+    border: 0;
+    outline: 0;
 }
 /* 
 header .menu-list  a:hover {
@@ -147,6 +154,8 @@ header .menu-list  a:hover {
 .menu-list li a:visited {
     color: var(--black);
     background-color: var(--orange);
+    border: 0;
+    outline: 0;
 }
 
 /* .menu-list li a:hover {
@@ -195,7 +204,7 @@ header .menu-list  a:hover {
     grid-template-columns: repeat(2, 1fr);
     gap: 0;
     /* margin-top: 5svh; */
-    margin-top: 0;
+    /* margin-top: 10svh; */
     /* border: solid var(--black) 5px; */
 }
 
@@ -212,8 +221,20 @@ header .menu-list  a:hover {
     /* border: solid var(--black) 5px; */
     border: none;
     outline: none;
+}
+
+.welcomeSection .title-div h1 {
     font-size: 1rem;
 }
+
+/* .welcomeSection .title-div:first-child, */
+/* .welcomeSection .title-div:nth-child(1) {
+    align-items: flex-end;
+}
+
+.welcomeSection .title-div:nth-child(5) {
+    align-items: flex-start;
+} */
 
 .welcomeSection div img {
     object-fit:cover;
