--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -5,12 +5,22 @@
 }
 
 .shopping-cart {
-    margin: 12vh 0;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: -200vw;
     /* border: green solid 1px; */
     display: grid;
     gap: 1rem;
-    align-items: center;
+    align-content: start;
+    transition: 1500ms;
+    padding: 1rem 0;
+    min-height: 80vh;
+    margin: 10vh 0;
+    overflow: scroll;
 }
+
 
 .box-cart {
     border-bottom: var(--orange) solid 1px;
@@ -33,8 +43,7 @@
     text-decoration: underline;
 }
 
-.box-2-child input {
-    max-width: 20%;
+.itemPrice {
     border: none;
     outline: none;
     color: var(--black);
@@ -43,7 +52,7 @@
     min-height: fit-content;
     font-size: 0.8rem;
     font-weight: bold;
-    padding-left: 7%;
+    padding: 0.2rem;
 }
 
 .box-2 :nth-child(2) {
@@ -79,3 +88,110 @@
     padding: 0.3rem;
     font-size: 0.7rem;
 }
+
+.boxItem {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0.5rem;
+    align-items: center;
+    /* justify-content: center; */
+    /* max-height: 30vh; */
+    max-height: max-content;
+    gap: 0.5rem;
+    font-size: 1rem;
+    font-weight: 700;
+    border: solid var(--green-one) 2px;
+    background-color: var(--white);
+    border-radius: 0.5rem;
+}
+
+.boxItem h3 {
+    /* border: solid red 2px; */
+    margin: 0 auto;
+    text-transform: uppercase;
+    background-color: var(--yellow);
+    color: var(--black);
+    grid-column: span 2;
+    padding: 0.4rem;
+    border-radius: 0.5rem;
+    font-size: 0.7rem;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    min-height: 2.6rem;
+    /* min-width: 0%; */
+    max-width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.boxItem img {
+    grid-column: span 2;
+    object-fit: contain;
+    max-width: 100%;
+    /* max-height: 50%; */
+    margin: 0 auto;
+    border-radius: 0.5rem;
+    /* opacity: 0.6; */
+    /* transition: 1s; */
+    /* box-shadow: 0 0.3rem 0.7rem 0; */
+}
+
+.boxItem select {
+    max-width: 85%;
+    border-radius: 0.5rem;
+    font-size: 0.7rem;
+    padding: 0.2rem;
+    font-weight: bold;
+}
+
+.boxItem select option {
+    color: var(--white);
+    background-color: var(--black);
+    max-width: 50%;
+    margin: 0 auto;
+    font-weight: 600;
+}
+
+.boxItem button {
+    background-color: var(--black);
+    border: solid var(--black) 2px;
+    border-radius: 0.3rem;
+    padding: 0.3rem;
+    color: var(--white);
+    letter-spacing: 0.1rem;
+    outline: none;
+    max-width: 100%;
+}
+
+.displayNone {
+    
+}
+
+.totalToPay {
+    min-width: 50vw;
+    min-height: 2rem;
+    background-color: var(--green);
+    color: var(--white);
+    font-size: 1rem; 
+    padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    font-weight: 800;
+    position: fixed;
+    bottom: 0;
+    right: -200vw;
+    transition: 1500ms;
+    border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.totalToPay span {
+    margin-right: 1rem;
+}
+
+
+.open-totalPrice {
+    right: 0;
+
+} 
