--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -197,7 +197,7 @@ header .menu-list  a:hover {
     min-width: 100svw;
     max-width: 100svw;
     /* min-height: 100svh; */
-    max-height: 100svh;
+    max-height: 100vh;
     display: grid;
     align-items: center;
     justify-content: center;
